--- a/Movies/app/src/main/AndroidManifest.xml
+++ b/Movies/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MovieDetailActivity"
+            android:label="@string/movie_detail_activity" />
     </application>
 
 </manifest>
