--- a/Movies/app/src/main/AndroidManifest.xml
+++ b/Movies/app/src/main/AndroidManifest.xml
@@ -3,13 +3,15 @@
     package="com.example.admin.movies">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".MovieSingleton"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +21,7 @@
         <activity
             android:name=".MovieDetailActivity"
             android:label="@string/movie_detail_activity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
