--- a/Movies/app/src/main/AndroidManifest.xml
+++ b/Movies/app/src/main/AndroidManifest.xml
@@ -18,9 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MovieDetailActivity"
-            android:label="@string/movie_detail_activity" />
+        <activity android:name=".MovieDetailActivity" />
         <activity android:name=".MainActivity"></activity>
     </application>
 
