--- a/Movies/app/src/main/AndroidManifest.xml
+++ b/Movies/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.admin.movies">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MovieSingleton"
@@ -20,6 +21,15 @@
         </activity>
         <activity android:name=".MovieDetailActivity" />
         <activity android:name=".MainActivity"></activity>
+
+        <receiver
+            android:name=".NetworkBroadcastReceiver"
+            android:exported="false"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
