--- a/FirebaseTesting/app/build.gradle
+++ b/FirebaseTesting/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
