--- a/QuizApp/app/build.gradle
+++ b/QuizApp/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
