1. All activities will extend from Base Activity 2. Added correct answer chosen logic (in progress)

--- a/QuizApp/app/src/main/AndroidManifest.xml
+++ b/QuizApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="example.banty.com.quizapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,8 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".activities.GameScreenActivity" />
+        <activity
+            android:name=".activities.BaseActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
