1. Game summary screen added (needs UI improvement) 2. Bug fixes

--- a/QuizApp/app/src/main/AndroidManifest.xml
+++ b/QuizApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.GameScreenActivity" />
+        <activity android:name=".activities.GameoverScreen" />
         <activity
             android:name=".activities.BaseActivity"
             android:screenOrientation="portrait" />
