--- a/Instagramclone/app/build.gradle
+++ b/Instagramclone/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
 
     //Design Library for coordinator layout and Toolbars
     compile 'com.android.support:design:25.3.1'
-
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.2'
 
 }
