Account activity in progress

--- a/Instagramclone/app/src/main/AndroidManifest.xml
+++ b/Instagramclone/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".activities.likes.LikesActivity"/>
         <activity android:name=".activities.profile.ProfileActivity"/>
         <activity android:name=".activities.BaseActivity"/>
+        <activity android:name=".activities.profile.AccountSettingActivity"/>
     </application>
 
 </manifest>
