launch login screen if user is signed out

--- a/Instagramclone/app/build.gradle
+++ b/Instagramclone/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     //Image loader
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    implementation 'com.google.firebase:firebase-auth:9.0.0'
 }
