--- a/Instagramclone/app/build.gradle
+++ b/Instagramclone/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     implementation 'com.google.firebase:firebase-auth:9.0.0'
+    implementation 'com.google.firebase:firebase-database:9.0.0'
 }
