--- a/Instagramclone/app/build.gradle
+++ b/Instagramclone/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.google.firebase:firebase-auth:11.0.2'
     implementation 'com.google.firebase:firebase-database:11.0.2'
+    implementation 'com.google.firebase:firebase-storage:11.0.2'
 }
 //firebase plugin
 apply plugin: 'com.google.gms.google-services'
