--- a/Dagger2/app/build.gradle
+++ b/Dagger2/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     //image loading
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+    compile 'com.jakewharton.timber:timber:4.5.1'
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.2'
