--- a/RepositoryPattern/build.gradle
+++ b/RepositoryPattern/build.gradle
@@ -25,3 +25,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    guavaVersion = '18.0'
+    roomVersion = '1.0.0'
+}
