--- a/Instantappdemo/app/build.gradle
+++ b/Instantappdemo/app/build.gradle
@@ -5,7 +5,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.compileSdk
+    buildToolsVersion rootProject.buildTools
     defaultConfig {
         applicationId "banty.com.instantappdemo"
         minSdkVersion 17
@@ -23,11 +24,32 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
+    implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
+
+    implementation "com.google.android.gms:play-services-auth:$playServicesAuthVersion"
+
+    testImplementation "junit:junit:$junitVersion"
+
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+        exclude module: "espresso-idling-resource"
+        exclude group: "com.android.support"
+    }
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espressoVersion") {
+        exclude module: "espresso-core"
+        exclude module: "recyclerview-v7"
+        exclude group: "com.android.support"
+    }
+    androidTestImplementation("com.android.support.test:rules:$androidTestVersion") {
+        exclude group: "com.android.support"
+    }
+
+    androidTestImplementation("com.android.support.test:runner:$androidTestVersion") {
+        exclude group: "com.android.support"
+    }
+
+    androidTestImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
