--- a/Instantappdemo/build.gradle
+++ b/Instantappdemo/build.gradle
@@ -25,3 +25,18 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+
+    buildTools = "27.0.3"
+    compileSdk = 27
+    targetSdk = 27
+    minSdk = 21
+
+    supportLibVersion = "27.1.1"
+    playServicesAuthVersion = "11.8.0"
+    espressoVersion = "3.0.2"
+    androidTestVersion = "0.5"
+    hamcrestVersion = "1.3"
+    junitVersion = "4.12"
+}
